# s2-geometry-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  S2BUILDER.md  S2LATLNG_IMPLEMENTATION.md  S2PREDICATES_IMPLEMENTATION.md  S2_GEOMETRY_RUST_PORT_TODO.md  SHAPE_INDEX_IMPLEMENTATION.md  TODO.md  WASM.md  edge_crosser_summary.md  flake.nix  justfile  shell.nix  simple_test  simple_test.cc  temp_calculation.rs  test_cpp_intersection.cc
.claude/agents/: cpp-to-rust-porter.md
.github/workflows/: cpp-verification.yml  rust-tests.yml
cpp_compat_tests/: Cargo.toml  README.md  build.rs  build.rs.bak
cpp_compat_tests/src/: cpp_bridge.cpp  cpp_bridge.h  lib.rs  lib.rs.bak  simple_bridge.cpp  simple_bridge.h  simple_lib.rs  submodule_helper.rs
cpp_compat_tests/tests/: conditional_cpp_compat.rs  cpp_compat.rs  s2cap_compat.rs  s2cell_compat.rs  s2latlng_compat.rs
examples/: debug_precision_issue.rs  s2builder_demo.rs  shape_index_demo.rs  wasm_example.rs
src/: angle.rs  cap.rs  cell.rs  cell_id.rs  cell_union.rs  chord_angle.rs  edge_crosser.rs  error.rs  interval.rs  latlng.rs  latlng_rect.rs  lib.rs  loop.rs  math.rs  mutable_shape_index.rs  point.rs  point_shape.rs  polygon_shape.rs  polyline.rs  polyline_shape.rs  predicates.rs  r2.rs  region_coverer.rs  shape.rs  shape_index.rs
src/builder/: graph.rs  layers.rs  mod.rs  snap_functions.rs
tests/: test_constants.rs  test_glam_integration.rs  test_project_setup.rs  test_r1interval_port.rs  test_r2rect_port.rs  test_s1angle_port.rs  test_s1chord_angle_port.rs  test_s1interval_port.rs  test_s2boolean_operation_port.rs  test_s2builder.rs  test_s2cap_port.rs  test_s2cell_basic.rs  test_s2cell_id_port.rs  test_s2cell_port.rs  test_s2cell_union_port.rs  test_s2coords_port.rs  test_s2coords_simplified.rs  test_s2edge_crosser_port.rs  test_s2edge_crossings_port.rs  test_s2latlng_port.rs  test_s2latlng_rect_port.rs  test_s2loop_basic.rs  test_s2loop_port.rs  test_s2measures_port.rs  test_s2point_port.rs  test_s2polygon_port.rs  test_s2polyline_port.rs  test_s2predicates_comprehensive.rs  test_s2predicates_port.rs  test_s2query_system_port.rs
